gate-centos-lb-ceph-online-multinodes/openstack/ingress/Deployment_ingress-error-pages.yaml
# Source: ingress/templates/deployment-error.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-error-pages
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: ingress
    application: ingress
    component: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: ingress
      application: ingress
      component: error-pages
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: ingress
        application: ingress
        component: error-pages
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "6ff762de677a29a1d0294a4c4eb23fd37f35e7b17f0253c71905da06fcab5d87"
        configmap-etc-hash: "b32b9ce945c4bb7819fd45733c484dfbe98ab4178fb7a58b82dedbc89ef1fc92"
    spec:
      securityContext:
        runAsUser: 65534
      shareProcessNamespace: true
      serviceAccountName: ingress-error-pages
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - ingress
                  - key: application
                    operator: In
                    values:
                    - ingress
                  - key: component
                    operator: In
                    values:
                    - error-pages
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: "enabled"
      terminationGracePeriodSeconds: 60
      containers:
        - name: ingress-error-pages
          image: "gcr.io/google_containers/defaultbackend:1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          command:
            - /tmp/ingress-error-pages.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/ingress-error-pages.sh
                  - stop
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: ingress-bin
              mountPath: /tmp/ingress-error-pages.sh
              subPath: ingress-error-pages.sh
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: ingress-bin
          configMap:
            name: ingress-bin
            defaultMode: 0555
