gate-centos-lb-ceph-online-multinodes/openstack/ingress/Deployment_ingress.yaml

# Source: ingress/templates/deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: ingress
    application: ingress
    component: server
    app: ingress-api
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  selector:
    matchLabels:
      release_group: ingress
      application: ingress
      component: server
      app: ingress-api
  template:
    metadata:
      labels:
        release_group: ingress
        application: ingress
        component: server
        app: ingress-api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "6ff762de677a29a1d0294a4c4eb23fd37f35e7b17f0253c71905da06fcab5d87"
        configmap-etc-hash: "b32b9ce945c4bb7819fd45733c484dfbe98ab4178fb7a58b82dedbc89ef1fc92"
    spec:
      securityContext:
        runAsUser: 65534
      shareProcessNamespace: true
      serviceAccountName: ingress-ingress
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - ingress
                  - key: application
                    operator: In
                    values:
                    - ingress
                  - key: component
                    operator: In
                    values:
                    - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: "enabled"
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 60
      containers:
        - name: ingress
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.23.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 0
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              hostPort: 80
            - containerPort: 443
              hostPort: 443
            - containerPort: 18080
              hostPort: 18080
            - containerPort: 10254
              hostPort: 10254
            - containerPort: 28080
              hostPort: 28080
          command:
            - /tmp/ingress-controller.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/ingress-controller.sh
                  - stop
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: ingress-bin
              mountPath: /tmp/ingress-controller.sh
              subPath: ingress-controller.sh
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: ingress-bin
          configMap:
            name: ingress-bin
            defaultMode: 0555
